<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/text_notifications_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        android:textColor="@color/medium_gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintHeight_default="wrap" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_notifications"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rectangle_widget"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:scaleX="1.25"
        android:scaleY="1.25"
        android:drawableStart="@drawable/ic_notifications_black_24dp"
        android:drawablePadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/text_notifications_label"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintHeight_default="wrap" />

    <TextView
        android:id="@+id/text_theme_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/theme"
        android:textColor="@color/medium_gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/switch_notifications"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintHeight_default="wrap" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rectangle_widget"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:scaleX="1.25"
        android:scaleY="1.25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/text_theme_label"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintHeight_default="wrap">

        <RadioButton
            android:id="@+id/radio_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:drawableTop="@drawable/baseline_light_mode_24"
            android:drawablePadding="4dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/light"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:drawableTop="@drawable/baseline_android_24"
            android:text="@string/system"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/baseline_dark_mode_24"
            android:drawablePadding="4dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/dark"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/text_language_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/language"
        android:textColor="@color/medium_gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintHeight_default="wrap" />

    <Spinner
        android:id="@+id/language_spinner"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/languages_with_icon"
        android:entries="@array/language_options"
        android:paddingStart="32dp"
        android:paddingEnd="8dp"
        android:scaleX="1.25"
        android:scaleY="1.25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/text_language_label"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintHeight_default="wrap" />

    <TextView
        android:id="@+id/text_button_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/terms_and_conditions"
        android:textColor="@color/medium_gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/language_spinner"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintHeight_default="wrap" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rectangle_widget"
        android:padding="8dp"
        android:scaleX="1.25"
        android:scaleY="1.25"
        android:text="@string/view_full_terms_and_conditions"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/text_button_label"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintHeight_default="wrap" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>